--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+  background-color: #328e86;
 }
 
 h1 {
@@ -11,13 +11,13 @@ h1 {
 h2 {
   text-align: center;
   margin-top: 10px;
-  color: #666;
+  color: rgba(0, 0, 0, 0.455);
 }
 
 .calculadora {
   width: 314px;
   margin: 0 auto;
-  background-color: #fff;
+  background-color: #7e7474;
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -44,7 +44,7 @@ input[type="button"] {
 }
 
 input[type="button"]:hover {
-  background-color: #ddd;
+  background-color: #c86a6a;
 }
 
 input[type="button"]:last-child {
