--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h2 {
   background-color: #7e7474;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 5px rgb(0, 0, 0);
 }
 
 #pantalla {
